--- a/src/content/representatives-list.css
+++ b/src/content/representatives-list.css
@@ -4,12 +4,18 @@
 }
 
 .table-header {
+	margin-top: 8px;
+	padding: 14px;
 	background-color: rgb(248, 248, 249);
 }
 
 .table-element {
-	padding: 16px;
+	padding: 14px;
 	border-bottom: rgb(245, 245, 245) 1px solid;
+}
+
+.table-element.selected {
+	background-color: rgb(220, 220, 220);
 }
 
 .first-column {
@@ -19,4 +25,8 @@
 
 .second-column {
 	width: 25%;
+}
+
+.type-text {
+	color: rgb(77, 180, 238)
 }
